# SParSH-AMG

./: CMakeLists.txt  README.md  main.cpp  matrix_poisson_P1_14401  matrix_poisson_P1rhs_14401
include/: AMG.hpp  AMG_coarse_level_solver.hpp  AMG_coarsening.hpp  AMG_cpu_matrix.hpp  AMG_cycle_utilities.hpp  AMG_gpu_matrix.hpp  AMG_gpu_phase_utilities.hpp  AMG_gpu_phases.hpp  AMG_gpu_phases_2.hpp  AMG_matrix.hpp  AMG_phases.hpp  AMG_smoothers.hpp
src/: AMG_coarse_level_solver.cpp  AMG_coarsening.cpp  AMG_cpu_matrix.cpp  AMG_cycle_utilities.cpp  AMG_file_read.cpp  AMG_gpu_matrix.cu  AMG_gpu_phase_utilities.cu  AMG_gpu_phases.cu  AMG_gpu_phases_2.cu  AMG_main_solvers.cpp  AMG_main_solvers.cu  AMG_matrix.cpp  AMG_phases.cpp  AMG_smoothers.cpp  CMakeLists.txt
